fixed overflow from shooting star increasing size of screen

--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,9 @@ body {
     font-weight: 400;
     line-height: 1.5;
     background-color: rgb(0,0,0);
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 html {
